# sockets-and-pipes

./: .gitignore  cabal.project  default.nix  hie.yaml  sockets-and-pipes.cabal
.github/workflows/: build.yml  haskell.yml
configurations/: ghc-8.10.project  ghc-8.6.project  ghc-8.8.project  ghc-9.0.project  ghc-9.2.project  ghc-9.4.project
nix/: ascii-case.nix  ascii-caseless.nix  ascii-char.nix  ascii-numbers.nix  ascii-predicates.nix  ascii-superset.nix  ascii-th.nix  ascii.nix  attoparsec-run.nix  doctest.nix  relude.nix  sources.json  unfork.nix
sockets-and-pipes/: license.txt  sockets-and-pipes.cabal
sockets-and-pipes/src/SocketsAndPipes/: Syllabus.hs
src/SocketsAndPipes/: Serve.hs
src/SocketsAndPipes/Serve/: Exceptions.hs  Finally.hs  ForkBracket.hs  Log.hs  Loop.hs  OnError.hs  Setup.hs  Shutdown.hs  Sockets.hs
