cabal-version: 3.0

name: sockets-and-pipes
version: 0.3

synopsis: Support for the Sockets and Pipes book
category: HTTP, Network, Streaming, Text

license: Apache-2.0
license-file: license.txt

author: Chris Martin, Julie Moronuki
maintainer: Joy of Haskell <hello@joyofhaskell.com>

description:
    This package re-exports from all the libraries mentioned in
    /Sockets and Pipes/ (available on <https://leanpub.com/sockets-and-pipes Leanpub>).

    Please read the "SocketsAndPipes.Syllabus".

    This release is for the sixth draft of the book, released September 2022.

source-repository head
    type: git
    location: git://github.com/joyofhaskell/sockets-and-pipes.git

library
    default-language: Haskell2010
    default-extensions: NoImplicitPrelude
    ghc-options: -Wall -fno-warn-unused-imports
    hs-source-dirs: src
    exposed-modules: SocketsAndPipes.Syllabus

    build-depends:
      , ascii ^>= 1.5.4
      , aeson ^>= 2.0
      , async ^>= 2.2.2
      , attoparsec ^>= 0.14.4
      , attoparsec-run ^>= 0.0.1
      , base ^>= 4.14 || ^>= 4.15 || ^>= 4.16
      , blaze-html ^>= 0.9
      , bytestring ^>= 0.10 || ^>= 0.11
      , containers ^>= 0.6.2.1
      , directory ^>= 1.3.6
      , filepath ^>= 1.4
      , hash-addressed ^>= 0.2
      , mtl ^>= 2.2
      , network ^>= 3.1.2
      , network-simple ^>= 0.4.2
      , pipes ^>= 4.3.16
      , relude ^>= 1.0 || ^>= 1.1
      , resourcet ^>= 1.2.4
      , safe-exceptions ^>= 0.1.7.0
      , stm ^>= 2.5
      , text ^>= 1.2.4.1
      , time ^>= 1.10 || ^>= 1.11 || ^>= 1.12
      , unfork ^>= 1.0

    reexported-modules:

      -- aeson
      , Data.Aeson
      , Data.Aeson.Key
      , Data.Aeson.KeyMap

      -- ascii
      , ASCII
      , ASCII.Char
      , ASCII.Decimal

      -- async
      , Control.Concurrent.Async

      -- attoparsec
      , Data.Attoparsec.ByteString

      -- attoparsec-run
      , Data.Attoparsec.ByteString.Run

      -- base
      , Control.Concurrent
      , Control.Monad
      , Data.Char
      , Prelude
      , System.IO

      -- blaze-html
      , Text.Blaze.Html
      , Text.Blaze.Html.Renderer.Utf8
      , Text.Blaze.Html5
      , Text.Blaze.Html5.Attributes

      -- bytestring
      , Data.ByteString
      , Data.ByteString.Builder
      , Data.ByteString.Char8
      , Data.ByteString.Lazy

      -- containers
      , Data.Map.Strict

      -- directory
      , System.Directory

      -- filepath
      , System.FilePath

      -- hash-addressed
      , HashAddressed.Directory
      , HashAddressed.HashFunction

      -- mtl
      , Control.Monad.Except

      -- network
      , Network.Socket
      , Network.Socket.ByteString

      -- network-simple
      , Network.Simple.TCP

      -- pipes
      , Pipes

      -- relude
      , Relude

      -- resourcet
      , Control.Monad.Trans.Resource

      -- safe-exceptions
      , Control.Exception.Safe

      -- stm
      , Control.Concurrent.STM
      , Control.Concurrent.STM.TVar
      , Control.Monad.STM

      -- text
      , Data.Text
      , Data.Text.Encoding
      , Data.Text.IO
      , Data.Text.Lazy
      , Data.Text.Lazy.Builder
      , Data.Text.Lazy.Builder.Int
      , Data.Text.Lazy.Encoding
      , Data.Text.Lazy.IO

      -- time
      , Data.Time

      -- unfork
      , Unfork
